It can be used as a security check, e.g. if a service like mysql should not be publicly available, or
to perform custom actions to initialize the service that depends on the one that was just started.
Thanks to Christian Goettsche for patch. Example:
   if succeeded port 443 protocol https then exec "/bin/monit start myclient"
   if succeeded host example.org port 3306 protocol mysql then alert

New: For unix sockets monit can perform action on successful connection, example:
   if succeeded unixsocket /var/run/mysql.sock protocol mysql then exec "/bin/myscript.sh initdb"

New: Issue #915: Add support for sevice name regular expressions in  monit CLI status, summary, start,
stop, restart, unmonitor, monitor commands. Examples:
   monit status myservice  # exact match
   monit status "data.*"    # pattern which will match all services whos name contain "data" substring


Version 5.27.2

Fixed: Issue #931: The "if does exist" test with unmonitor or stop action didn't work properly.

Fixed: Issue #937: If the filesystem check uses mountpoint instead of device and multiple devices
are defined for the same filesystem with mismatch between /etc/mtab and device name in disk statistics
path, Monit reported error and disk activity was not reported.

Fixed: Issue #948: Cookie validation problem, Invalid CSRF Token, if the request is more then 1024 bytes.
Increased the request to 8kB.

Fixed: Disk activity statistics if procfs fallback was used instead of sysfs.

Fixed: LXC container: Monit may ignore the "start delay" option of the "set daemon" statement when the container
was rebooted, while the host was not rebooted (the LXC cotainer's boot time is not virtualized - it is inherited
from the host).

Changed: The debug mode no longer logs error about procfs /proc/<pid>/io and /proc/<pid>/fd open
errors, because if monit is not running as root, these errors are common as linux doesn't allo to